최신 기술 스택 고도화 및 리팩토링
Phase 0: 보안 취약점 수정
- 자격증명 외부화 (AWS Key, DB Password, Telegram Token → 환경변수)
- SQL Injection 수정 (MyBatis ${} → #{}, DynamoDB PartiQL 파라미터화)
- Actuator 엔드포인트 제한 (prod: health,info만 노출)

Phase 1: Spring Boot 3.4.1 + Java 17 마이그레이션
- Spring Boot 2.7.4 → 3.4.1, Gradle 7.5 → 8.12
- javax.* → jakarta.* 네임스페이스 전환
- HandlerInterceptorAdapter → HandlerInterceptor

Phase 2: AWS SDK v2 전환
- AWS SDK v1 → v2 (SES, DynamoDB)
- MessageTagDto 자체 POJO로 SDK 의존성 분리
- listTemplates nextToken 페이징 버그 수정

Phase 3: 폴링 품질 개선 + 코드 리팩토링
- 이중 발송 경쟁 조건 수정 (SELECT FOR UPDATE + @Transactional)
- Thread.sleep → Guava RateLimiter (7건/초)
- DynamoDB 삭제 지수 백오프
- SendTemplatedEmailJob 공통 추상 클래스 추출
- 설정 파일 통합 (공통 application.yml)
- Logback 통합 (logback-spring.xml)
- 미사용 코드 삭제

Phase 4: Spring Security API Key 인증
Phase 5: SESMailService 단위 테스트 (Mockito)
Phase 6: Dockerfile, docker-compose.yml, Graceful Shutdown

Co-Authored-By: Claude Opus 4.6 (1M context) <noreply@anthropic.com>